# CppCMakeVcpkgTemplate

./: .clang-format  CMakeLists.txt  CMakeLists.txt.bak  Info.plist.in  vcpkg.json
.github/workflows/: hosted-ninja-vcpkg_submod.yml
assets/: emptyfile.txt
src/: main.cpp
src/backends/: emptyfile.txt
